--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@angular/cli": "9.1.1",
     "@angular/compiler-cli": "9.1.2",
     "@angular/language-service": "9.1.2",
+    "@ngneat/spectator": "5.6.1",
     "@ngrx/schematics": "9.1.0",
     "@ngrx/store-devtools": "9.1.0",
     "@nrwl/cypress": "9.2.2",
