--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {},
+    "paths": {
+      "@twittwer/dynamic-title": ["libs/dynamic-title/src/index.ts"]
+    },
     "strict": true
   },
   "angularCompilerOptions": {
