--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "nx-playground",
+  "name": "ngx-tools",
+  "description": "Workspace for Angular helper libraries.",
   "version": "0.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/twittwer/ngx-tools.git"
+  },
+  "private": false,
   "license": "MIT",
+  "author": {
+    "name": "Tobias Wittwer",
+    "email": "t.wittwer95@gmail.com"
+  },
   "scripts": {
     "ng": "ng",
     "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
+    "start": "nx serve",
+    "build": "nx build",
+    "test": "nx test",
+    "lint": "nx workspace-lint && nx lint",
+    "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -21,22 +31,20 @@
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
-    "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help"
   },
-  "private": true,
   "dependencies": {},
   "devDependencies": {
     "@angular/cli": "9.1.0",
     "@nrwl/workspace": "9.2.2",
-    "@types/node": "~8.9.4",
+    "@types/node": "8.9.5",
     "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
+    "ts-node": "7.0.1",
+    "tslint": "6.0.0",
     "eslint": "6.8.0",
-    "typescript": "~3.8.3",
-    "prettier": "1.19.1"
+    "typescript": "3.8.3",
+    "prettier": "2.0.4"
   }
 }
