--- a/package.json
+++ b/package.json
@@ -33,11 +33,25 @@
     "format:check": "nx format:check",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@nrwl/angular": "9.2.2",
+    "@angular/animations": "9.1.2",
+    "@angular/common": "9.1.2",
+    "@angular/compiler": "9.1.2",
+    "@angular/core": "9.1.2",
+    "@angular/forms": "9.1.2",
+    "@angular/platform-browser": "9.1.2",
+    "@angular/platform-browser-dynamic": "9.1.2",
+    "@angular/router": "9.1.2",
+    "core-js": "2.6.11",
+    "rxjs": "6.5.4",
+    "zone.js": "0.10.3"
+  },
   "devDependencies": {
-    "@angular/cli": "9.1.0",
+    "@angular/cli": "9.1.1",
     "@nrwl/workspace": "9.2.2",
     "@types/node": "8.9.5",
     "dotenv": "6.2.0",
@@ -45,6 +59,17 @@
     "tslint": "6.0.0",
     "eslint": "6.8.0",
     "typescript": "3.8.3",
-    "prettier": "2.0.4"
+    "prettier": "2.0.4",
+    "@angular/compiler-cli": "9.1.2",
+    "@angular/language-service": "9.1.2",
+    "@angular-devkit/build-angular": "0.901.1",
+    "codelyzer": "5.0.1",
+    "jest-preset-angular": "8.1.2",
+    "@nrwl/jest": "9.2.2",
+    "jest": "25.2.3",
+    "@types/jest": "25.1.4",
+    "ts-jest": "25.2.1",
+    "cypress": "4.4.0",
+    "@nrwl/cypress": "9.2.2"
   }
 }
