--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "@nrwl/angular": "9.2.2",
     "core-js": "2.6.11",
     "rxjs": "6.5.4",
+    "tslib": "1.11.1",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.1",
+    "@angular-devkit/build-ng-packagr": "0.901.3",
     "@angular/cli": "9.1.1",
     "@angular/compiler-cli": "9.1.2",
     "@angular/language-service": "9.1.2",
@@ -71,6 +73,7 @@
     "eslint": "6.8.0",
     "jest": "25.2.3",
     "jest-preset-angular": "8.1.2",
+    "ng-packagr": "9.1.1",
     "prettier": "2.0.4",
     "ts-jest": "25.2.1",
     "ts-node": "7.0.1",
