build: add commitlint

--- a/package.json
+++ b/package.json
@@ -35,18 +35,36 @@
     "update": "ng update @nrwl/workspace",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "commit": "git-cz",
+    "commitlint": "commitlint --from main"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/prompt"
+    }
   },
   "dependencies": {},
   "devDependencies": {
     "@angular/cli": "9.1.0",
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-angular": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
+    "@commitlint/prompt": "^9.0.1",
     "@nrwl/workspace": "9.5.1",
     "@types/node": "~8.9.4",
+    "commitizen": "^4.1.2",
     "dotenv": "6.2.0",
+    "eslint": "6.8.0",
+    "husky": "^4.2.5",
+    "prettier": "2.0.4",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.8.3",
-    "prettier": "2.0.4"
+    "typescript": "~3.8.3"
   }
 }
