--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "commit": "git-cz",
-    "commitlint": "commitlint --from main"
+    "commitlint": "commitlint --from main",
+    "prerelease": "nx affected:build --all",
+    "release": "nx affected --target release --all"
   },
   "husky": {
     "hooks": {
@@ -57,12 +59,16 @@
     "@commitlint/config-conventional": "^9.0.1",
     "@commitlint/prompt": "^9.0.1",
     "@nrwl/workspace": "9.5.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
     "@types/node": "~8.9.4",
     "commitizen": "^4.1.2",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
     "husky": "^4.2.5",
     "prettier": "2.0.4",
+    "semantic-release": "^17.1.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
     "typescript": "~3.8.3"
