--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "email": "t.wittwer95@gmail.com"
   },
   "scripts": {
-    "postinstall": "node ./decorate-angular-cli.js",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "ng": "nx",
     "nx": "nx",
     "start": "ng serve",
@@ -51,7 +51,19 @@
       "path": "@commitlint/prompt"
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "@nrwl/angular": "^9.5.1",
+    "@angular/animations": "^9.1.0",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
+    "rxjs": "~6.5.4",
+    "zone.js": "^0.10.2"
+  },
   "devDependencies": {
     "@angular/cli": "9.1.0",
     "@commitlint/cli": "^9.0.1",
@@ -71,6 +83,17 @@
     "semantic-release": "^17.1.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "@angular/compiler-cli": "^9.1.0",
+    "@angular/language-service": "^9.1.0",
+    "@angular-devkit/build-angular": "0.901.0",
+    "codelyzer": "~5.0.1",
+    "jest-preset-angular": "8.1.2",
+    "@nrwl/jest": "9.5.1",
+    "jest": "25.2.3",
+    "@types/jest": "25.1.4",
+    "ts-jest": "25.2.1",
+    "cypress": "^4.1.0",
+    "@nrwl/cypress": "9.5.1"
   }
 }
