--- a/nx.json
+++ b/nx.json
@@ -1,7 +1,11 @@
 {
-  "npmScope": "ngx-tools",
+  "npmScope": "twittwer",
   "affected": {
-    "defaultBase": "master"
+    "defaultBase": "main"
+  },
+  "workspaceLayout": {
+    "appsDir": "demos",
+    "libsDir": "packages"
   },
   "implicitDependencies": {
     "angular.json": "*",
