--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
     "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-ng-packagr": "~0.901.0",
     "@angular/cli": "9.1.0",
     "@commitlint/cli": "^9.0.1",
     "@commitlint/config-angular": "^9.0.1",
@@ -79,6 +81,7 @@
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
     "husky": "^4.2.5",
+    "ng-packagr": "^9.0.0",
     "prettier": "2.0.4",
     "semantic-release": "^17.1.1",
     "ts-node": "~7.0.0",
